kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: aqarysaif/my-app
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: 
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
            
      restartPolicy: Always
